refactor jwt signature verifier - get rid of DatatypeConverter