@@ -3,9 +3,7 @@ package com.sap.cloud.security.token.validation;
 import static java.nio.charset.StandardCharsets.*;
 
 import javax.annotation.Nullable;
-import javax.xml.bind.DatatypeConverter;
 
-import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
 import java.security.KeyFactory;
 import java.security.NoSuchAlgorithmException;
@@ -14,6 +12,7 @@ import java.security.Signature;
 import java.security.SignatureException;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.regex.Pattern;
@@ -27,17 +26,18 @@ import com.sap.cloud.security.xsuaa.client.OAuth2ServiceEndpointsProvider;
 import com.sap.cloud.security.xsuaa.client.OAuth2ServiceException;
 import com.sap.cloud.security.xsuaa.client.OAuth2TokenKeyService;
 import com.sap.cloud.security.xsuaa.client.XsuaaDefaultEndpoints;
+import com.sap.cloud.security.xsuaa.jwt.DecodedJwt;
 import com.sap.cloud.security.xsuaa.jwt.JSONWebKey;
 import com.sap.cloud.security.xsuaa.jwt.JSONWebKeySet;
 
-public class OAuth2TokenSignatureValidator implements Validator<String> {
+public class JwtSignatureValidator implements Validator<DecodedJwt> {
 	private Map<String, PublicKey> keyCache = new HashMap<>();
 	private OAuth2ServiceConfiguration serviceConfiguration;
 	private OAuth2TokenKeyService tokenKeyService;
 	private OAuth2ServiceEndpointsProvider tokenUrlProvider;
-	private static Logger LOGGER = LoggerFactory.getLogger(OAuth2TokenSignatureValidator.class);
+	private static Logger LOGGER = LoggerFactory.getLogger(JwtSignatureValidator.class);
 
-	public OAuth2TokenSignatureValidator(OAuth2ServiceConfiguration xsuaaServiceConfiguration, OAuth2TokenKeyService tokenKeyService) {
+	public JwtSignatureValidator(OAuth2ServiceConfiguration xsuaaServiceConfiguration, OAuth2TokenKeyService tokenKeyService) {
 		Assertions.assertNotNull(xsuaaServiceConfiguration, "'xsuaaServiceConfiguration' is required");
 		Assertions.assertNotNull(tokenKeyService, "'tokenKeyService' is required");
 		this.serviceConfiguration = xsuaaServiceConfiguration;
@@ -46,24 +46,30 @@ public class OAuth2TokenSignatureValidator implements Validator<String> {
 	}
 
 	@Override
-	public ValidationResult validate(String token) {
-		// DecodedJwt decodedJwt = new Base64JwtDecoder().decode(token);
+	public ValidationResult validate(DecodedJwt decodedJwt) {
 		String kid = "key-id-1"; //TODO parse from JSON Header e.g. decodedJwt.getHeader().getKeyId()
 		String alg = "RS256"; //TODO parse from JSON Header e.g. decodedJwt.getHeader().getAlgorithm()
 		String jku = "https://authentication.stagingaws.hanavlab.ondemand.com/token_keys"; //TODO parse from JSON Header e.g. decodedJwt.getHeader().getJsonKeyUrl()
 
+		return validate(decodedJwt.getEncodedToken(), kid, alg,jku);
+	}
+
+	public ValidationResult validate(String token, String tokenKeyId, String tokenAlgorithm, String tokenKeyUrl) {
 		// TODO validate jku by validating with uaaDomain
 
-		PublicKey publicKey = getPublicKey(kid, jku);
+		PublicKey publicKey = getPublicKey(tokenKeyId, tokenKeyUrl);
 		if (publicKey == null) {
 			return ValidationResults.createInvalid("There is no JSON Web Token Key to prove the identity of the JWT.");
 		}
 		try {
-			return verifySignature(token, alg, publicKey);
+			if(!isJwtSignatureValid(token, tokenAlgorithm, publicKey)) {
+				return ValidationResults.createInvalid("Signature verification failed.");
+			}
 		} catch (Exception e) {
 			LOGGER.error("Error during JSON Web Signature could not be verified.", e);
 			return ValidationResults.createInvalid(e.getMessage());
 		}
+		return ValidationResults.createValid();
 	}
 
 	@Nullable
@@ -71,14 +77,14 @@ public class OAuth2TokenSignatureValidator implements Validator<String> {
 		PublicKey publicKey = lookupCache(kid); // TODO kid + kty?
 		if (publicKey == null) {
 			try {
-				JSONWebKeySet jwks = tokenKeyService.retrieveTokenKeys(tokenUrlProvider.getAuthorizeEndpoint()); // TODO
-				JSONWebKey jwk = jwks.getKeyByTypeAndId(JSONWebKey.Type.RSA, kid); // TODO check
+				JSONWebKeySet jwks = tokenKeyService.retrieveTokenKeys(tokenUrlProvider.getJwksUri());
+				JSONWebKey jwk = jwks.getKeyByTypeAndId(JSONWebKey.Type.RSA, kid);  //TODO kid + kty?
 				publicKey = createPublicKeyFromString(jwk.getType(), jwk.getPublicKey());
-				keyCache.put(kid, publicKey); //TODO kid + kty
+				keyCache.put(kid, publicKey); //TODO kid + kty?
 			} catch (OAuth2ServiceException e) {
-				LOGGER.error("Error retrieving token keys from Identity Service ({}).", tokenUrlProvider.getAuthorizeEndpoint(), e);
-			} catch (NoSuchAlgorithmException | UnsupportedEncodingException | InvalidKeySpecException e) {
-				LOGGER.error("Error creating PublicKey from JSON Web Key received from Identity Service({}).", tokenUrlProvider.getAuthorizeEndpoint(), e);
+				LOGGER.error("Error retrieving JSON Web Keys from Identity Service ({}).", tokenUrlProvider.getJwksUri(), e);
+			} catch (NoSuchAlgorithmException | InvalidKeySpecException e) {
+				LOGGER.error("Error creating PublicKey from JSON Web Key received from Identity Service ({}).", tokenUrlProvider.getAuthorizeEndpoint(), e);
 			}
 		}
 		return publicKey;
@@ -89,22 +95,21 @@ public class OAuth2TokenSignatureValidator implements Validator<String> {
 	}
 
 	private PublicKey createPublicKeyFromString(JSONWebKey.Type webKeyType, String publicKey)
-			throws NoSuchAlgorithmException, InvalidKeySpecException, UnsupportedEncodingException {
+			throws NoSuchAlgorithmException, InvalidKeySpecException {
 		if(webKeyType != JSONWebKey.Type.RSA) {
 			throw new IllegalStateException("JWT token with web key type " + webKeyType + " can not be verified.");
 		}
 		KeyFactory keyFactory = KeyFactory.getInstance(webKeyType.value()); // "RSA"
 
-		byte[] keyBytes = DatatypeConverter.parseBase64Binary(
-			new String(publicKey.getBytes(UTF_8.name()), UTF_8));
+		byte[] decodedKeyBytes = Base64.getDecoder().decode(publicKey);
 
-		X509EncodedKeySpec keySpecX509 = new X509EncodedKeySpec(keyBytes);
+		X509EncodedKeySpec keySpecX509 = new X509EncodedKeySpec(decodedKeyBytes);
 		return keyFactory.generatePublic(keySpecX509);
 	}
 
 
-	private ValidationResult verifySignature(String token, String tokenAlgorithm, PublicKey publicKey) throws
-			SignatureException, InvalidKeyException, NoSuchAlgorithmException, UnsupportedEncodingException {
+	private boolean isJwtSignatureValid(String token, String tokenAlgorithm, PublicKey publicKey) throws
+			SignatureException, InvalidKeyException, NoSuchAlgorithmException {
 		if(!"RS256".equalsIgnoreCase(tokenAlgorithm)) {
 			throw new IllegalStateException("JWT token with signature algorithm " + tokenAlgorithm + " can not be verified.");
 		}
@@ -118,25 +123,12 @@ public class OAuth2TokenSignatureValidator implements Validator<String> {
 		publicSignature.initVerify(publicKey);
 		publicSignature.update(headerAndPayload.getBytes( UTF_8)); // provide data
 
-		boolean isSignatureValid = publicSignature.verify(parseTokenSignature(tokenHeaderPayloadSignature[2]));
+		byte[] decodedSignatureBytes = Base64.getUrlDecoder().decode(tokenHeaderPayloadSignature[2]);
+
+		boolean isSignatureValid = publicSignature.verify(decodedSignatureBytes);
 		if(!isSignatureValid) {
 			LOGGER.error("Signature of JWT Token is not valid: the identity provided by the JSON Web Token Key can not be verified");
-			return ValidationResults.createInvalid("Signature verification failed!");
 		}
-		return ValidationResults.createValid();
-	}
-
-	private static byte[] parseTokenSignature(final String signature) throws UnsupportedEncodingException {
-		String tokenSignature = signature;
-		int padding = 4 - tokenSignature.getBytes(UTF_8.name()).length % 4;
-		if (padding != 4) {
-			for (int i = 0; i < padding; ++i)
-				tokenSignature += '=';
-		}
-		tokenSignature = tokenSignature.replaceAll("-", "+");
-		tokenSignature = tokenSignature.replaceAll("_", "/");
-
-		return DatatypeConverter.parseBase64Binary(
-				new String(tokenSignature.getBytes(UTF_8.name()), UTF_8));
+		return isSignatureValid;
 	}
 }
